--- a/nav.html
+++ b/nav.html
@@ -1,27 +1,23 @@
 <style>
-  #bottom-nav-container {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+  #top-nav {
     background-color: #111;
-    border-top: 2px solid #ffcc00;
+    border-bottom: 2px solid #ffcc00;
+    padding: 10px;
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
-    padding: 10px 0;
-    z-index: 1000;
+    justify-content: center;
+    gap: 10px;
   }
 
   .nav-link {
     background-color: #1c1c1c;
     border: 1px solid #333;
-    padding: 8px 12px;
-    margin: 4px;
+    padding: 8px 14px;
     border-radius: 8px;
     color: #ffcc00;
     text-decoration: none;
-    font-size: 0.9rem;
     font-weight: bold;
+    font-size: 0.9rem;
     transition: background 0.3s;
   }
 
@@ -30,14 +26,14 @@
   }
 
   .nav-link.disabled {
+    background-color: #0b0b0b;
+    border-color: #222;
     color: #777;
     pointer-events: none;
-    background-color: #0b0b0b;
-    border: 1px solid #222;
   }
 </style>
 
-<div id="bottom-nav-container">
+<div id="top-nav">
   <a href="index.html" class="nav-link" data-page="index.html">Home</a>
   <a href="dashboard.html" class="nav-link" data-page="dashboard.html">Dashboard</a>
   <a href="cbt.html" class="nav-link" data-page="cbt.html">CBT</a>
@@ -51,12 +47,12 @@
 </div>
 
 <script>
-  // Disable current page’s link
-  const links = document.querySelectorAll('.nav-link');
-  const current = window.location.pathname.split("/").pop();
+  // Disable current page link
+  const page = window.location.pathname.split("/").pop();
+  const links = document.querySelectorAll(".nav-link");
   links.forEach(link => {
-    if (link.getAttribute('data-page') === current) {
-      link.classList.add('disabled');
+    if (link.getAttribute("data-page") === page) {
+      link.classList.add("disabled");
     }
   });
 </script>
